--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,1 +1,3 @@
 <%= link_to "Home", root_path, :class => 'brand' %>
+<%= link_to "Chores", chores_path, :class => 'brand' %>
+<%= link_to "Finished", chore_finishes_path, :class => 'brand' %>
