--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,5 +4,5 @@
 	<%= link_to "Chores", chores_path %>
 </div>
 <div>
-	<%= link_to "Finished Chores", chore_finishes_path %>
+	<%= link_to "Houses", houses_path %>
 </div>
