--- a/app/views/chores/show.html.erb
+++ b/app/views/chores/show.html.erb
@@ -16,12 +16,12 @@
 </p>
 
 <p>
-  <b>Dateadded:</b>
+  <b>Date Added:</b>
   <%= @chore.dateadded %>
 </p>
 
 <p>
-  <b>Datefinished:</b>
+  <b>Date Finished:</b>
   <%= @chore.datefinished %>
 </p>
 
