--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,6 @@
 <%= link_to "Home", root_path, :class => 'brand' %>
 <%= link_to "Chores", chores_path, :class => 'brand' %>
-<%= link_to "Finished", chore_finishes_path, :class => 'brand' %>
+<%= link_to "Houses", houses_path, :class => 'brand' %>
 <% if user_signed_in? %>
 	<li><%= link_to 'Logout', destroy_user_session_path, :class => 'brand', method: :delete %></li>
 <% end %>
