--- a/app/views/chores/index.html.erb
+++ b/app/views/chores/index.html.erb
@@ -1,9 +1,11 @@
 <h1>Chore Listing</h1>
 
 <div></div>
-<%= check_box_tag(:show_finished) %>
-<%= label_tag(:show_finished, "Show Finished Chores") %>
 
+<form class="form-horizontal" data-remote="true">
+    <%= check_box_tag(:show_finished) %>
+    <%= label_tag :show_finished, "Show Finished Chores", class: "checkbox inline" %>
+</form>
 
 <table>
   <tr>
