Animated the show/hide function

--- a/app/views/chores/index.html.erb
+++ b/app/views/chores/index.html.erb
@@ -42,7 +42,7 @@
 <script type="text/javascript">
     $(function () {
         $("#toggle_button").click(function () {
-            $(".finished_chore_tr").toggle();
+            $(".finished_chore_tr").toggle("slow");
         });
     });
 </script>
