--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
     <title><%= content_for?(:title) ? yield(:title) : "ChoresAt4030" %></title>
     <meta name="description" content="Rails App for Keeping Track of Chores">
     <meta name="author" content="Ronald Martin">
+    <%= favicon_link_tag %>
     <%= stylesheet_link_tag "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
