--- a/app/views/chores/index.html.erb
+++ b/app/views/chores/index.html.erb
@@ -1,10 +1,14 @@
-<h1>Chore Listing</h1>
+<h1>Choreboard</h1>
 
 <div></div>
 
-<button id="toggle_button">Show/Hide Finished Chores</button>
+<button class="btn" id="toggle_button">
+    <i class="icon-off"></i>
+    Show/Hide Finished Chores
+    <i class="icon-th-list"></i>
+</button>
 
-<table>
+<table class="table table-bordered table-hover table-condensed">
   <tr>
     <th>Chore</th>
     <th>Assigned To</th>
