--- a/app/views/houses/index.html.erb
+++ b/app/views/houses/index.html.erb
@@ -1,11 +1,11 @@
-<h1>Listing houses</h1>
+<h1>Le House Roster</h1>
 
-<table>
+<table class="table table-bordered table-hover table-striped">
   <tr>
     <th>House</th>
+    <th>Size</th>
     <th></th>
-    <th></th>
-    <th></th>
+    <th>Commands</th>
   </tr>
 
 <% @houses.each do |house| %>
