--- a/app/views/chores/edit.html.erb
+++ b/app/views/chores/edit.html.erb
@@ -1,4 +1,5 @@
-<h1>Editing chore</h1>
+<h1>Mark that Chore Done!</h1>
+<em><small>But only if it's actually done.</small></em>
 
 <%= render 'form' %>
 
