--- a/app/views/houses/_form.html.erb
+++ b/app/views/houses/_form.html.erb
@@ -1,15 +1,19 @@
 <%= simple_form_for(@house) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
+  <div class="form-inputs input-prepend">
+    <label>House Name</label>
+    <span class="add-on"><i class="icon-flag"></i></span>
     <%= f.input :house_name %>
   </div>
 
-  <div class="form-inputs">
+  <div class="form-inputs input-append">
+    <label>Number of Housemates</label>
     <%= f.input :num_housemates %>
+    <span class="add-on">#</span>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit, 'Create House', :class => 'btn btn-success' %>
   </div>
 <% end %>
