--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,23 @@
-<%= link_to "Home", root_path, :class => 'brand' %>
-<%= link_to "Chores", chores_path, :class => 'brand' %>
-<%= link_to "Houses", houses_path, :class => 'brand' %>
-<% if user_signed_in? %>
-	<li><%= link_to 'Logout', destroy_user_session_path, :class => 'brand', method: :delete %></li>
-<% end %>
+<div class="navbar navbar-inverse navbar-fixed-top">
+	<div class="navbar-inner">
+		<div class="container">
+			<%= link_to "Chores@4030", root_path, :class => 'brand' %>
+			
+			<div class="nav-collapse collapse">
+				<ul class="nav">
+					<li><%= link_to "Chores", chores_path %></li>
+					<li><%= link_to "Houses", houses_path %></li>
+				</ul>
+				<div class="nav nav-pills pull-right">
+					<% if user_signed_in? %>
+						<li><%= link_to 'Edit account', edit_user_registration_path %></li>
+						<li><%= link_to 'Logout', destroy_user_session_path, :method => 'delete' %></li>
+					<% else %>
+						<li><%= link_to 'Login', new_user_session_path %></li>
+						<li><%= link_to 'Sign up', new_user_registration_path %></li>
+					<% end %>
+				</div>
+			</div> <!--/.nav-collapse-->
+		</div>
+	</div>
+</div>
