Fixed more layouts.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,16 +4,18 @@
 	<p class="text-center">Thank you for using Chores@4030! Use the following links navigate the site. Please email Ronald at <a class="text-info" href="mailto:ronmar@sas.upenn.edu">ronmar@sas.upenn.edu</a> with any questions.</p>
 </div>
 
-<div class="row-fluid text-left">
-	<div class="span6">
-		<h2>Chore List</h2>
-		<i class="icon-list"></i>
-		<%= link_to 'chores', chores_path %>
-	</div>
+<div class="container">
+	<div class="row-fluid text-left">
+		<div class="span6">
+			<h2>Chore List</h2>
+			<i class="icon-list"></i>
+			<%= link_to 'chores', chores_path %>
+		</div>
 
-	<div class="span6 text-right">
-		<h2>House List</h2>
-		<%= link_to 'houses', houses_path %>
-		<i class="icon-home"></i>
+		<div class="span6 text-right">
+			<h2>House List</h2>
+			<%= link_to 'houses', houses_path %>
+			<i class="icon-home"></i>
+		</div>
 	</div>
 </div>
