--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -9,7 +9,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, 'Resend unlock instructions', :class => "btn btn-success" %>
+    <%= f.button :submit, 'Resend unlock instructions', :class => 'btn btn-success' %>
   </div>
 <% end %>
 
